reprotest (0.7.3) UNRELEASED; urgency=medium

  * Fix --no-clean-on-error, it should work again.

 -- Ximin Luo <infinity0@debian.org>  Fri, 13 Oct 2017 15:42:51 +0200

reprotest (0.7.2) unstable; urgency=medium

  * Various bug fixes to get the basic dsc+schroot example working.
  * Improve the dsc+schroot preset to run builds as non-root.

 -- Ximin Luo <infinity0@debian.org>  Tue, 03 Oct 2017 19:25:11 +0200

reprotest (0.7.1) unstable; urgency=medium

  * New features:
    + Add a --auto-build option to try to determine which specific variations
      cause unreproducibility.
    + Add a --source-pattern option to restrict copying of source_root, and set
      this automatically in our presets.
  * Usability improvements:
    + Improve error messages in some common scenarios.
      - giving a source_root or build_command that doesn't exist
      - using reprotest with default settings after not installing Recommends
    + Output hashes after a successful --auto-build.
    + Print a warning message if we reproduced successfully but didn't vary
      everything.
  * Fix varying both umask and user_group at the same time.
  * Have dpkg-source extract to different build dir iff varying the build-path.
  * Pass --exclude-directory-metadata to diffoscope(1) by default as this is
    the majority use-case. Document the other cases in README and the man page.

 -- Ximin Luo <infinity0@debian.org>  Tue, 03 Oct 2017 15:56:25 +0200

reprotest (0.7) unstable; urgency=medium

  [ Ximin Luo ]
  * Document when one should use --diffoscope-args=--exclude-directory-metadata
    and do this in our Debian package presets.
  * Bump diffoscope Recommends version to >= 84 to support this flag.
  * Import autopkgtest 4.4, with minimal patches.
  * Choose an existent HOME for the control build. (Closes: #860428)
  * Add the ability to vary the user (Closes: #872412)
  * Heavy refactoring to support > 2 builds.
  * Add a variation config language to be able to configure the specifics of