@@ -19,6 +19,7 @@ Build-Depends: debhelper (>= 10),
  locales-all <!nocheck>,
  python3-coverage <!nocheck>,
  python3-pytest <!nocheck>,
+ python3-rstr <!nocheck>,
  tox <!nocheck>,
 # these below helps diffoscope produce nicer output in tests
  python3-tlsh <!nocheck>,
@@ -36,6 +37,7 @@ Depends: ${python3:Depends},
  libdpkg-perl,
  procps,
  python3-pkg-resources,
+ python3-rstr,
  ${misc:Depends}
 Recommends: diffutils | diffoscope (>= 84),
  disorderfs (>= 0.5.2),
